--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,3 +34,15 @@
     {% include scripts.html %}
   </body>
 </html>
+
+<script>
+function toggleAbstract(id) {
+  var element = document.getElementById(id);
+  if (element.style.display === "none") {
+    element.style.display = "block";
+  } else {
+    element.style.display = "none";
+  }
+}
+</script>
+
