--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,8 +4,7 @@ layout: archive
 
 {{ content }}
 
-<!-- Remove the recent posts header -->
-<!-- <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3> -->
+<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
 {% if paginator %}
   {% assign posts = paginator.posts %}
@@ -13,10 +12,9 @@ layout: archive
   {% assign posts = site.posts %}
 {% endif %}
 
-<!-- Remove the entries section to prevent recent posts from showing -->
-<!-- {% assign entries_layout = page.entries_layout | default: 'list' %}
+{% assign entries_layout = page.entries_layout | default: 'list' %}
 <div class="entries-{{ entries_layout }}">
   {% include documents-collection.html entries=posts type=entries_layout %}
 </div>
 
-{% include paginator.html %} -->
+{% include paginator.html %}
